# autonomous-influencer-factory

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  behavior-check.md  copilot-instructions.md
.github/workflows/: Jenkinsfile  ci.yml  security-scan.yml  spec-validation.yml
agents/research_agent/: agent.py  init.py
agents/research_agent/prompts/: trend_analysis.md
agents/research_agent/tools/: correlation_detector.py  trend_analyzer.py
api/: init.py
api/core/: dependencies.py  security.py
api/v1/: init.py
api/v1/endpoints/: content.py  engagement.py  trends.py
api/v1/schemas/: content.py  trend.py
config/: development.yaml  logging.yaml  production.yaml  settings.py  test.yaml
data/models/: content.py  init.py  trend.py
docs/infrastructure/decisions/: 001-agent-context.md  002-database-partitioning.md  003-openclaw-integration.md
docs/infrastructure/diagrams/: system-architecture.mmd
docs/infrastructure/patterns/: agent-patterns.md  skill-patterns.md
infrastructure/docker/: Dockerfile  Dockerfile.agent  docker-compose.test.yml  docker-compose.yml  otel-collector-config.yaml  prometheus.yml
infrastructure/docker/nginx/: nginx.conf
infrastructure/docker/nginx/conf.d/: chimera.conf
infrastructure/docker/nginx/scripts/: cleanup-test-db.sh
infrastructure/kubernetes/: deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  service.yaml
infrastructure/terraform/: main.tf  outputs.tf
mcp/: servers.yml
mcp/tenx_sense/: config.json
requirements/: base.txt  dev.txt  prod.txt  test.txt
scripts/: validate_specs.py
skills/skill_fetch_trends/: skill.yaml
specs/: _meta.md  configuration_technical.md  functional.md  technical.md
tests/unit/skills/: test_trend_fetcher.py
tests/unit/utils/: test_logging.py  test_telemetry.py  test_validation.py
utils/logging/: __init__.py  structured_logger.py
utils/telemetry/: metrics.py  tracer.py
utils/validation/: schema_validator.py  spec_validator.py
