# pyproject.toml
# Project Chimera - Python Project Configuration

[project]
name = "chimera-factory"
version = "0.1.0"
description = "Autonomous AI Influencer Factory with Agentic Orchestration"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
    {name = "Project Chimera Team", email = "team@chimera.example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]
keywords = ["ai", "agents", "influencer", "autonomous", "mlops", "orchestration"]
dependencies = [
    # Core
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # Web Framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "starlette>=0.27.0",
    
    # Database
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "psycopg2-binary>=2.9.0",
    "asyncpg>=0.29.0",
    
    # Async
    "anyio>=3.7.0",
    "asyncio>=3.4.3",
    
    # HTTP Client
    "httpx>=0.25.0",
    "aiohttp>=3.9.0",
    
    # Data Processing
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    
    # ML/AI
    "openai>=1.3.0",
    "anthropic>=0.7.0",
    "langchain>=0.0.340",
    "langsmith>=0.0.70",
    
    # MCP
    "mcp>=0.1.0",
    "mcp[cli]>=0.1.0",
    
    # Utilities
    "pyyaml>=6.0",
    "jsonschema>=4.19.0",
    "python-dateutil>=2.8.0",
    "pytz>=2023.3",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "ipython>=8.17.0",
    "jupyter>=1.0.0",
    "black>=23.12.0",
    "isort>=5.13.0",
    "flake8>=6.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "pytest-mock>=3.12.0",
    "pytest-benchmark>=4.0.0",
    "coverage>=7.3.0",
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=1.3.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
]

# Testing dependencies
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "pytest-mock>=3.12.0",
    "pytest-benchmark>=4.0.0",
    "responses>=0.24.0",
    "freezegun>=1.2.0",
    "factory-boy>=3.3.0",
    "faker>=19.0.0",
]

# Production dependencies
prod = [
    "gunicorn>=21.2.0",
    "uvicorn[standard]>=0.24.0",
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "opentelemetry-exporter-otlp>=1.21.0",
    "prometheus-client>=0.19.0",
    "sentry-sdk>=1.38.0",
    "psutil>=5.9.0",
]

# Security dependencies
security = [
    "bandit>=1.7.0",
    "safety>=2.3.0",
    "detect-secrets>=1.5.0",
    "cryptography>=41.0.0",
]

# MCP servers
mcp = [
    "mcp[cli]>=0.1.0",
    "mcp[server]>=0.1.0",
    "tenx-mcp-sense>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/your-org/chimera-factory"
Documentation = "https://chimera-factory.readthedocs.io"
Repository = "https://github.com/your-org/chimera-factory"
Changelog = "https://github.com/your-org/chimera-factory/blob/main/CHANGELOG.md"
Issues = "https://github.com/your-org/chimera-factory/issues"

[project.scripts]
chimera = "chimera.cli:main"
chimera-agent = "agents.cli:main"
chimera-skill = "skills.cli:main"

[project.entry-points."mcp.servers"]
spec-validator = "mcp.custom.spec_validator:server"
openclaw-bridge = "mcp.custom.openclaw_bridge:server"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = [
    "chimera",
    "agents",
    "api",
    "skills",
    "utils",
    "data",
    "config",
]

# ====================
# Tool Configuration
# ====================

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
exclude = [
    "^tests/",
    "^\.venv/",
    "^venv/",
    "^build/",
    "^dist/",
]

[[tool.mypy.overrides]]
module = [
    "sqlalchemy.*",
    "alembic.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-v",
    "--tb=short",
    "--durations=10",
]
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "contract: contract tests",
    "performance: performance tests",
    "slow: slow tests",
]

[tool.coverage.run]
source = ["chimera", "agents", "api", "skills", "utils", "data"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/migrations/*",
    "*/setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\bProtocol\b",
    "@(abc\\.)?abstractmethod",
]

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
skips = ["B101", "B104"]

[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E203",  # whitespace before ':'
    "W503",  # line break before binary operator
    "B008",  # do not perform function calls in argument defaults
]
exclude = [
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".pytest_cache",
    ".tox",
    ".venv",
    "__pycache__",
    "_build",
    "build",
    "dist",
    "venv",
]

[tool.ruff.isort]
known-first-party = ["chimera"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

# ====================
# Documentation
# ====================

[tool.sphinx]
project = "Project Chimera"
copyright = "2024, Project Chimera Team"
version = "0.1.0"
release = "0.1.0"
extensions = [
    "sphinx.ext.autodoc",
    "sphinx.ext.napoleon",
    "sphinx.ext.viewcode",
    "sphinx.ext.intersphinx",
    "sphinx_rtd_theme",
    "myst_parser",
]
exclude_patterns = ["_build", "Thumbs.db", ".DS_Store"]
html_theme = "sphinx_rtd_theme"

# ====================
# Security Scanning
# ====================

[tool.safety]
output = "json"
ignore = [
    "51457",  # django before 3.2.19, 4.0.11, 4.1.11
    "64431",  # pillow before 10.1.0
]

# ====================
# Linting
# ====================

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".pytest_cache",
    ".tox",
    ".venv",
    "__pycache__",
    "_build",
    "build",
    "dist",
    "venv",
]
per-file-ignores = [
    "__init__.py: F401",
]

# ====================
# Jupyter
# ====================

[tool.jupyter]
kernelspec = {
    "display_name": "Python 3 (Project Chimera)",
    "language": "python",
    "name": "python3-chimera",
}